removed unnecessary text

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <h4>3D</h4>
             <p>This was my very first Unity project — a simple "Subway Surfers" style game where the player has to dodge obstacles and survive as long as possible. Through this, I learned the basics of Unity, including object movement, collision detection, simple game logic, and maybe not so basic, procedural generation.</p>
             <img src="./assets/images/FreedomRunGameplayPicture.png" alt="Gameplay Screenshot">
-            <p> If you'd like to try it out, you can do so <a href="https://daobekii.itch.io/freedom-run">here</a>! (Please don't take it seriously, it's purely satire)</p>
+            <p> If you'd like to try it out, you can do so <a href="https://daobekii.itch.io/freedom-run">here</a>!</p>
             <h4>2D</h4>
             <p>I'm currently working on a 2D game inspired by The Binding of Isaac. It's still in active development, and I'm using it to learn new skills that can't be gained through 3D game development, such as 2D collision handling, 2D sprite creation and enemy behavior scripting tailored specifically for top-down 2D environment.</p>
             <img class="isaac" src="./assets/images/isaac1.png" alt="Game Screenshot 1">
