changed some text

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section>
             <h2 id="about">About</h2>
             <p>I am a passionate student who loves to work on various projects and learn new things. My passion for programming, combined with skills developed through general interest and hands-on experience in game programming with Unity, has sharpened my problem-solving abilities and deepened my programming skills.</p>
-            <p>I am currently studying International Media and Computing, which revolves around the standard IT-topics, but with more of a focus in image processing, computer graphics, web development and game development.</p>
+            <p>I am currently studying International Media and Computing, which revolves around general IT-topics, but with more of a focus in image processing, computer graphics, web development and game development.</p>
             <p>I am currently in my fifth semester and expect to complete my bachelor's degree in September 2026.</p>
         </section>
 
@@ -140,7 +140,7 @@
 
         <section>
             <h2 id="conclusion">Conclusion</h2>
-            <p>I am excited about the endless possibilities in the field of interactive media and game development. As I continue my studies and personal projects, I look forward to creating engaging experiences, contributing to innovative ideas and advancing my skills further. Thank you for reviewing my portfolio!</p>
+            <p>I am excited about the endless possibilities in the field of interactive media, game development, and general software development. As I continue my studies and personal projects, I look forward to creating engaging experiences, contributing to innovative ideas and advancing my skills further. Thank you for reviewing my portfolio!</p>
         </section>
     
         <footer>
